syntax = "proto3";

option java_package = "com.yhglobal.gongxiao.accountmanage.microservice";
option java_outer_classname = "SupplierCouponPostingServiceStructure";

import "gongxiao.global.structure.proto";
import "payment.account.common.proto";

service SupplierCouponPostingService {

    //根据projectId获取项目信息
    // rpc getProjectById(GetProjectByIdReq) returns (GetProjectByIdResp) {}
    // 获取流水统计金额数据的方法
    rpc generateFrontFlowSubtotal (GenerateFrontFlowSubtotalReq) returns (GenerateFrontFlowSubtotalResp) {
    }
    // 查询流水不分页
    rpc selectAllBySupplierIdNoPage (SelectAllBySupplierIdNoPageReq) returns (SelectAllBySupplierIdNoPageResp){

    }
    // 查询流水分页
    rpc selectAllBySupplierIdHasPage (SelectAllBySupplierIdHasPageReq) returns (FrontPageFlowPageInfo){

    }


}
message SelectAllBySupplierIdNoPageReq{
    RpcHeader rpcHeader = 1;
    string currencyCode = 2;
    int64 supplierId = 3;
    int64 projectId = 4;
    int32 moneyFlow = 5;
    int64 beginDate = 6;
    int64 endDate = 7;

}
message SelectAllBySupplierIdNoPageResp{
    int32 returnCode = 1; //返回码
    string msg = 2; //若调用不成功 错误信息
repeated Result result = 3;
}
message Result{

    string flowNo = 1;
    int32 type = 2;
    string typeStr = 3;
    string currencyCode = 4;
    double transactionAmount = 5;
    string transactionAmountStr = 6;
    double amountAfterTransaction = 7;
    string amountAfterTransactionStr = 8;
    int64 createTime = 9;
    string createByName = 10;
    string remark = 11;
}

message SelectAllBySupplierIdHasPageReq{
    RpcHeader rpcHeader = 1;
    string currencyCode = 2;
    int64 supplierId = 3;
    int64 projectId = 4;
    int32 moneyFlow = 5;
    int64 beginDate = 6;
    int64 endDate = 7;
    int32 pageNumber = 8;
    int32 pageSize = 9;
}

message GenerateFrontFlowSubtotalReq {
    RpcHeader rpcHeader = 1;
    string currencyCode = 2;
    int64 supplierId = 3;
    int64 projectId = 4;
    int32 moneyFlow = 5;
    int64 beginDate = 6;
    int64 endDate = 7;
}

message GenerateFrontFlowSubtotalResp {
    int32 returnCode = 1; //返回码
    string msg = 2; //若调用不成功 错误信息
    /**
     * 收入条数
     */
    int32 incomeQuantity = 3;
    /**
     * 支出条数
     */
    int32 expenditureQuantity = 4;
    /**
     * 收入金额
     */
    double incomeAmount = 5;
    /**
     * 支出金额
     */
    double expenditureAmount = 6;
}
